# Meerkat_Robot_ROS1

./: README.md
csv_pkg/: CMakeLists.txt  package.xml
csv_pkg/src/: csv_MarkerArray_subscriber.cpp  csv_object_marker_subscriber.cpp
maps/: CMakeLists.txt  package.xml
maps/launch/: generate_image_service.launch  map_server.launch  tactile_comb_service.launch
maps/src/: generate_image.py  gnn_class.py  heatmap_generation.py  heatmap_generation_standalone.py  human_heatmap_rbf_100.py  human_positions.csv  markers.csv  markers.py  markers_rviz.csv  markers_rviz_offset.csv  markers_test.csv  pick_cv_values.py  service.py  tactile_comb_deployment.py  tactile_comb_service.py  tof_detection.py
maps/weights/: best_model.pt
meerkat_description/: CMakeLists.txt  package.xml
meerkat_description/launch/: description.launch
meerkat_description/urdf/: meerkat_description.urdf
meerkat_stack/meerkat_base/joy_control/: package.xml
meerkat_stack/meerkat_base/joy_control/config/: joystick.yaml
meerkat_stack/meerkat_base/meerkat_base/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_base/meerkat_base/launch/: base.launch  base2.launch  meerkat_rviz.launch
meerkat_stack/meerkat_base/meerkat_drivers/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_base/meerkat_drivers/script/: diagnostics.py
meerkat_stack/meerkat_base/motor/meerkat_wheel/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_config/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_config/rviz/: FalseCeilingInspector.rviz  base_ref.rviz  navigation.rviz  navigation_2.rviz
meerkat_stack/meerkat_launch/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_launch/launch/: base.launch  ceiling_inspector.launch  ekf.launch  human_positions.csv  level_4_navigation.launch  mapping.launch  navigation.launch  navigation_2.launch  navigation_office_space_level_5.launch  rns_navigation.launch
meerkat_stack/meerkat_maps/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_msgs/: CMakeLists.txt  package.xml
meerkat_stack/meerkat_nav/: README.md
meerkat_stack/meerkat_stack/: CMakeLists.txt  package.xml
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp  waypoints_navigation_goals.cpp
(+14 files in other folders)
