<?xml version="1.0"?>
<package format="2">
  <name>meerkat_stack</name>
  <version>0.0.0</version>
  <description>The meerkat_stack meta package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sriniketh@todo.todo">Sriniketh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>meerkat_base</exec_depend>
    <exec_depend>meerkat_msgs</exec_depend>
    <exec_depend>meerkat_drivers</exec_depend>
    <exec_depend>meerkat_sims</exec_depend>
    <exec_depend>meerkat_config</exec_depend>
    <exec_depend>meerkat_launch</exec_depend>
    <exec_depend>meerkat_maps</exec_depend>
    <exec_depend>gmapping</exec_depend>
    <exec_depend>slam_gmapping</exec_depend>
    <exec_depend>navigation</exec_depend>

    <export>
        <metapackage/>
    </export>

</package>
