<?xml version="1.0"?>
<package format="2">
  <name>meerkat_drivers</name>
  <version>0.0.0</version>
  <description>The meerkat_drivers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="meerkat@todo.todo">meerkat</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>sick_tim</exec_depend>
  <exec_depend>vectornav</exec_depend>
  <exec_depend>meerkat_wheel</exec_depend>
  <exec_depend>meerkat_joystick</exec_depend>
  
  <export>
     <metapackage/>
   </export>
</package>
